[bdist_wheel]
universal=1

[metadata]
name = sphinxcontrib-autodoc_doxygen
home-page = https://github.com/rmcgibbo/sphinxcontrib-autodoc_doxygen
license = MIT
author = Robert T. McGibbon
author-email = rmcgibbo@gmail.com
summary = Doxygen / Sphinx bridge, with autodoc and autosummary
description-file = README.rst
classifier =
	Development Status :: 3 - Alpha
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Documentation
	Topic :: Utilities
platform = any
keywords =
	sphinx
	doxygen

[files]
packages = sphinxcontrib
namespace_packages = sphinxcontrib
